--- a/css/styles.css
+++ b/css/styles.css
@@ -2,4 +2,21 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+
+:root {
+  --gray-900: #141414;
+  --gray-800: #1f1f1f;
+  --gray-700: #333333;
+  --customGreen: #c4f82a;
+  --customWhite: #ffffff;
+}
+
+body {
+  background-color: var(--gray-900);
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
