--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,9 @@ body {
   width: 24rem;
   padding: 2.5rem;
   border-radius: 0.75rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
 /* Profile image */
@@ -34,10 +37,33 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
-  padding-block-end: 1.5rem;
 }
 
 .social-profile-img {
   width: 5.5rem;
   border-radius: 50%;
+}
+
+/* Social user details */
+.social-user-details {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+h1 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: 150%;
+  letter-spacing: 0rem;
+  color: var(--customWhite);
+}
+
+.social-user-details p {
+  font-size: 0.875rem;
+  font-weight: bold;
+  line-height: 150%;
+  letter-spacing: 0rem;
+  color: greenyellow;
 }
