--- a/css/styles.css
+++ b/css/styles.css
@@ -124,3 +124,16 @@ h1 {
     font-size: 0.745rem;
   }
 }
+
+/* CSS for screen-reader-only text */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
