--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,8 @@ body {
 /* Card container */
 .social-card-container {
   background-color: var(--gray-800);
-  width: 24rem;
+  width: 100%;
+  max-width: 24rem;
   padding: 2.5rem;
   border-radius: 0.75rem;
   display: flex;
@@ -113,7 +114,7 @@ h1 {
 }
 
 /* Responsiveness */
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 23.7375rem) {
   .social-card-container {
     width: 20.438rem;
   }
